--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "laravel/framework": "6.*|7.*|8.*",
         "aws/aws-sdk-php": "~3.0"
     },
